<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">RoutePiresFront</string>
    <string name="google_maps_key"></string>
    <string name="logo_route_pires">Logo Route Pires</string>

    <string name="bem_vindo">Bem-vindo!</string>
    <string name="nome_gmail_com">nome@gmail.com</string>
    <string name="senha">senha</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="login">Login</string>

    <string name="n_o_membro">N\u00e3o \u00e9 membro?</string>
    <string name="registre_se_agora">Registre-se agora</string>

    <string name="ou_continue_com">Ou continue com</string>
    <string name="login_com_google">Login com Google</string>
    <string name="login_com_apple">Login com Apple</string>
    <string name="login_com_facebook">Login com Facebook</string>

    <string name="configuracao_titulo_motorista">Configura\u00e7\u00e3o do motorista</string>
    <string name="configuracao_titulo_passageiro">Configura\u00e7\u00e3o do passageiro</string>
    <string name="configuracao_motorista_nome">Xaulin</string>
    <string name="configuracao_motorista_apelido">@mototaxi</string>
    <string name="configuracao_passageiro_nome">Lucas</string>
    <string name="configuracao_passageiro_apelido">@passageiro</string>
    <string name="configuracao_passageiro_email">passageiro@exemplo.com</string>
    <string name="configuracao_avatar_descricao">Foto do perfil</string>
    <string name="configuracao_acao_editar">Editar perfil</string>
    <string name="configuracao_disponibilidade">Disponibilidade:</string>
    <string name="configuracao_opcao_editar">Editar perfil</string>
    <string name="configuracao_opcao_veiculo">Ve\u00edculo ou placa</string>
    <string name="configuracao_opcao_historico">Hist\u00f3rico de corridas</string>
    <string name="configuracao_opcao_notificacoes">Notifica\u00e7\u00f5es</string>
    <string name="configuracao_opcao_sair">Sair da conta</string>
    <string name="configuracao_icone_avancar">Avan\u00e7ar para a pr\u00f3xima etapa</string>
    <string name="configuracao_mensagem_placeholder">Funcionalidade "%1$s" dispon\u00edvel em breve</string>
    <string name="configuracao_status_disponivel">Disponibilidade ativada</string>
    <string name="configuracao_status_indisponivel">Disponibilidade desativada</string>

    <string name="procurando_corrida">Procurando Corrida</string>


    <string name="menu_corrida">Corrida</string>
    <string name="menu_avaliacoes">Avalia\u00e7\u00f5es</string>
    <string name="menu_negociacao">Negocia\u00e7\u00e3o</string>
    <string name="menu_configuracao">Perfil</string>

    <string name="negociacao_titulo">Negocia\u00e7\u00f5es</string>
    <string name="negociacao_editar">Editar</string>
    <string name="negociacao_search_hint">Buscar</string>
    <string name="negociacao_placeholder_editar">Fun\u00e7\u00e3o de edi\u00e7\u00e3o dispon\u00edvel em breve.</string>
    <string name="negociacao_placeholder_nova">Criar nova negocia\u00e7\u00e3o estar\u00e1 dispon\u00edvel em breve.</string>
    <string name="negociacao_compose_content_description">Iniciar nova negocia\u00e7\u00e3o</string>
    <string name="negociacao_avatar_content_description">Avatar do contato da negocia\u00e7\u00e3o</string>
</resources>
